# london-econ-today-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-app.yml
app/: __init__.py  config.py  extensions.py
app/data_helper/: __init__.py  data_initializer.py
app/data_helper/local/: dataset_prepared.xlsx
app/models/: __init__.py  app_registry.py  auth.py  dataset.py  subscription.py  user.py
app/routes/: __init__.py  auth.py  dataset.py  hello.py  subscription.py  user.py
app/schemas/: credential.py  dataset.py  user.py
tests/: conftest.py  data_sql.py  test_auth.py  test_dataset.py  test_hello.py  test_subscription.py  test_user.py
